// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page header renders correctly on article page screen 1`] = `
<div>
  <div
    className="header-controls"
  >
    <a
      className="header-controls-button header-controls-refresh-button "
      onClick={[Function]}
    />
    <a
      className="header-controls-button header-controls-return-button"
      href="/"
      onClick={[Function]}
    />
  </div>
  <p
    className="header"
  >
    Hacker News
  </p>
</div>
`;

exports[`Page header renders correctly on main page screen 1`] = `
<div>
  <div
    className="header-controls"
  >
    <a
      className="header-controls-button header-controls-refresh-button "
      onClick={[Function]}
    />
  </div>
  <p
    className="header"
  >
    Hacker News
  </p>
</div>
`;
